# Frontiers_of_Geometric_Computation_25Spring_PKU

./: .gitignore  README.md
Final_Project/: README.md  check_sdf.py  datasets.py  test_unet.py  test_unet_attention.py  test_vqvae.py  train_unet.py  train_unet_attention.py  train_vqvae.py  unzip.sh  visualize_vqvae.py
Final_Project/dataset_info_files/: info-shapenet.json
Final_Project/diffusion_unet/: buildingblocks.py  model.py  model_attention.py  utils.py
Final_Project/doc/: final_report.tex  ref.bib
Final_Project/preprocess/launchers/: launch_create_sdf_shapenet.sh
Final_Project/vqvae/: network.py
Homework1/: README.md  demo.py  fusion.py  pointcloud.ply
Homework1/report/: report.tex
Homework1/results/: mesh_first_frame.ply  pointcloud_100.ply  pointcloud_200.ply  pointcloud_300.ply  pointcloud_400.ply  pointcloud_500.ply  pointcloud_600.ply  pointcloud_700.ply  pointcloud_800.ply  pointcloud_900.ply
Homework2/: CMakeLists.txt  MeshSimplifier  README.md
Homework2/doc/: ref.bib  report2.bbl  report2.tex
Homework2/src/: main.cpp  model.hpp
Homework3/: README.md  README_handout.md
Homework3/PointNet/: README.md
Homework3/PointNet_PointNet++/: README.md  requirements.txt  test_classification.py  train_classification.py
Homework3/doc/: ref.bib  report3.tex
Homework3/doc/logs/: draw_fig.py  ocnn_test_acc.csv  ocnn_train_acc.csv  (+9 more)
Homework3/ocnn/: README.md  run.sh  test.sh  train.sh
Homework4/: README-handout.md  README.md  dataset.py  inference.py  inference.sh  model.py  train.py  train.sh
Homework4/doc/: ref.bib  report4.tex
(+26 files in other folders)
